fix: add fix for fonts - it's not covered by the rules

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 .page {
   background-color: #f8f8f8;
   color: #333;
-  font-family: Lato, sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 .header {
@@ -17,7 +17,7 @@
 }
 
 .header__anchor {
-  font-family: fantasy, cursive;
+  font-family: "fantasy", cursive;
 }
 
 @media (max-width: 768px) {
